model-routing: routing changes + security fixes (#2)
Made-with: Cursor